# pgvitals

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  health_score.sql  master.sql  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pgvitals-healthcheck.yml  validate.yml
docs/: SECTIONS.md  diagnostics.html  index.html  sections.js
monitoring/: capture_snapshot.sql  schema.sql  trend_queries.sql
pgvitals/: __init__.py  cli.py
runner/: pgvitals.conf.example  run_diagnostics.py
sql/: 00_prerequisites.sql  01_slow_queries.sql  02_temp_pressure.sql  03_seq_scan_hotspots.sql  04_n_plus_one.sql  05_jit_overhead.sql  06_unused_indexes.sql  07_duplicate_indexes.sql  08_invalid_indexes.sql  09_missing_fk_indexes.sql  10_index_bloat.sql  11_table_bloat.sql  12_toast_bloat.sql  13_table_size_ranking.sql  14_table_access_patterns.sql  15_autovacuum_activity.sql  16_dead_tuple_urgency.sql  17_stale_statistics.sql  18_long_running_transactions.sql  19_connection_saturation.sql  20_idle_in_transaction.sql  21_lock_wait_tree.sql  22_wait_events.sql  23_streaming_replication_lag.sql  24_logical_replication_lag.sql  25_replication_slot_wal.sql  26_xid_wraparound.sql  27_mxid_wraparound.sql  28_sequence_exhaustion.sql  29_guc_settings.sql  30_buffer_cache_hit.sql  31_checkpoint_pressure.sql  32_database_summary.sql  33_wal_generation.sql  34_partitioned_table_health.sql  35_prepared_transactions.sql  36_pg_stat_io.sql  37_extension_inventory.sql  38_foreign_data_wrappers.sql  39_function_performance.sql  (+1 more)
